Revision history for App-cpanminus-reporter

0.21 2023-07-19
    BUG FIXES:
      - fix tarball issue that prevented installation on FreeBSD
        (thanks jkeenan for reporting)
    OTHER:
      - improved test suite

0.20  2023-05-07
    BUG FIXES:
      - send compilation errors as UNKNOWN, not FAIL, so reports
        are consistent with what CPAN::Reporter does.

0.19  2023-04-30
    NEW FEATURES:
      - analyze multiple reports at once via the new "--all"
        flag (Marcin Kasperski)
      - change the default build.log last modification time
        check to other thresholds with the new "--max_age"
        flag (Marcin Kasperski)
      - allow reports coming from the filesystem (jkeenan)
    OTHER:
      - updated bugtracking meta link

0.18  2023-01-23
    OTHER:
      - reduced prereq tree by switching from File::HomeDir to
        File::HomeDir::Tiny.

0.17 2016-04-24
    BUG FIXES:
        - fixed support for extended paths on Windows
          (thanks Mithaldu and Sinan Unur)

0.16 2016-04-24
    NEW FEATURES:
        - exposes extra environment variables
    OTHER:
        - bumping up CTCC dependency
        - minor refactoring

0.15 2016-04-24
    BUG FIXES:
        - updated dependencies

0.14 2016-04-23
    NEW FEATURES:
        - support for cpanm --installdeps .
        - local installations are just skipped now, instead of aborting the
          entire thing.
    BUG FIXES:
        - improving the parser so it handles UNKNOWN/NA outputs properly
          (distributions with no tests, etc).
        - support for explicit NOTESTS results.
        - reports are skipped when current/tested
          perl versions mismatch (Michael LaGrasta)
        - added minimal perl version (Michael LaGrasta)
    OTHER:
        - improved some error messages with likely diagnostics.
        - significantly increased test coverage.

0.13  2015-04-19
    NEW FEATURES:
      - now cpanm-reporter understands the history file from other